pl 14
	- Simple but nifty mudela-mode.el for Emacs
	- slightly better syntax for single-note-repeat, now default kept in
Stem_engraver
	- bf: Abbrev_beams are not the only beams (see: jcn4, stem-info, thanks, Jan)
	- a CPU timer for Interpreting and Breaking
	- Separate Score_elem:
	  * invoke-once stuff in Super_elem (using function pointers; much cleaner now)
	  * geometrical stuff into Graphical_element
	  * Axis_group_* accept Graphical_elements iso. Score_elems
	  * A dimension cache, hopefully this makes lily a bit faster
	  * TeX output moved out of Score_elem, separate interface Outputter
	
	- < \multi 2; bla >  -> \multi 2 < bla > (mudela 0.1.6)
	- bf: don't do \multi if \type specified
	- Translator switching: Change_translator, Change_iterator
	

pl 12.jcn4
	- fixed dynamic f, magstep bug
	- gaps on abbrev-beams 
	- bf: stem-info
	- bf: last abbrev
	- bf: stem: do_width
	- bf: removed rest-column.hh

*******
sep 11

pl 13
	- big Rest/notehead rewrite:
	  * separated Rest, Note_head and Dots
	  * Dot_column: dots are now chord-wise aligned 
	  * Rhythmic_head is base for Rest, Note_head
	  * Merged Note_column and Rest_column
	  * Rest_engraver
	- grand Engraver/Translator/Performer rewrite.
	  * properties:  \property voice.dir = -1 (mudela 0.1.3)
	  * Input_translator junked, now Translators are generated
by the parser (mudela 0.1.4)
	  * Translator changing: \translator Staff=oboesolo
	  * Translator preselect: \type Staff=bla < c4 >. (mudela 0.1.5)
	  * Engraver/Performer now derived of Translator.
	  * Engraver_group_engraver/ Performer_group_performer derived of
	Translator_group
	  * renamed: Voice -> Thread, Voice_group -> Voice
	- renamed Audio_score to Performance
	- junked mididef statics
	- Audio debug output
	- bf: excess [] in scsi
	- bf: swallow \skips
	- bf: don't crash on infinite dims
	- renamed wohltemperirt to wtk1-fugue2
	- bf: address in GPL
	- bf: errors in stdin
	- bf: stop if errors in init files