@@ -11,6 +11,10 @@ f = \absdynamic { 2 } % f is a notename too.
 ff = \absdynamic { 1 }
 fff = \absdynamic { 0 }
 
+fp = \absdynamic { 8 }
+sf = \absdynamic { 9 }
+sfz = \absdynamic { 10 }
+
 cr = \spandynamic { 1 1 } 
 decr = \spandynamic { -1 1 }
 rc = \spandynamic { 1 2 } % stop a crescendo (worrks for decrescendo too)
