@@ -1,0 +1,17 @@
+% font-en-tja20.mf
+% part of LilyPond's pretty-but-neat music font
+
+mode_setup;
+
+test:=0;
+
+staffsize#:=20pt#;
+% staffsize#:=16pt#;
+stafflines:=5;
+stafflinethickness#:=0.4pt#;
+code:=-1;
+
+input bolletjes;
+
+end.
+
