@@ -62,7 +62,7 @@
 % set fonts and primary dimensions
 \def\musixtwentydefs{
         \balkheight=20pt
-        \notewidth=6pt
+        \notewidth=6.7pt
         \noteheight=5pt
         \staffrulethickness=0.4pt
         \musixtwentyfonts
@@ -73,7 +73,7 @@
 \def\musixsixteendefs{
         \balkheight=16pt
         \staffrulethickness=0.4pt
-        \notewidth=5pt
+        \notewidth=5.45pt
         \noteheight=4pt
         \musixsixteenfonts
         \font\textmusic=cmmi10
