@@ -14,6 +14,7 @@
         \font\italicfont=cmti10
         \font\dynfont=dyn10 scaled \magstep2
         \font\musicmathfont=cmsy10
+	\font\fontentja=font-en-tja20
 }
 
 
@@ -32,13 +33,21 @@
         \font\dynfont=dyn10 scaled \magstep1
         \font\musicdraw=musixsps
         \font\musicmathfont=cmsy8
+	\font\fontentja=font-en-tja16
 }
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % provide interface to musixtex fonts 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\musicdef\quartball{'007}
-\musicdef\halfball{'010}
-\musicdef\wholeball{'011}
+% \def\fetdef#1#2{\def#1{\fetchar{#2}}}
+% ugh, linewidth, ugh, tablexx.ly balldims not used!
+\def\fetdef#1#2{\def#1{\lower.5\staffrulethickness\hbox{\fetchar{#2}}}}
+\def\fetchar#1{\fontentja\char#1}
+% \musicdef\quartball{'007}
+% \musicdef\halfball{'010}
+% \musicdef\wholeball{'011}
+\fetdef\quartball{'002}
+\fetdef\halfball{'001}
+\fetdef\wholeball{'000}
 \musicdef\breveball{'040}
 \musicdef\longaball{'047}
 \musicdef\halfrest{'074}
